Fix typo in module name

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -202,7 +202,7 @@
                 "name": "Lance-torpilles Bazuri",
                 "description": "Cette torpille peut éventrer la coque de vaisseaux lourds"
             },
-            "laser-blaster-fury": {
+            "laser-blaster-furyo": {
                 "name": "Blaster laser Fury",
                 "description": "Cet intense faisceau laser écrase tout sur son passage"
             },
