Add author profile and back link to motion page

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -54,7 +54,9 @@
             "create": "Créer une motion",
             "creation_wording": "Vous pouvez créer une motion au sein de votre faction. Cette motion sera ensuite soumise au vote de l'ensemble des membres. Si elle est acceptée, alors la mesure proposée sera appliquée.",
             "currently_voting": "Une motion est déjà en cours à ce sujet",
+            "list_link": "Toutes les motions",
             "motion_results": "Une motion a été votée",
+            "new_motion": "Une motion vient d'être mise au vote",
             "rejected": "Rejetée le {date}",
             "send": "Lancer la motion",
             "success": "La motion a été créée avec succès !",
