Implement governor palace building and map territories

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -14,6 +14,7 @@
         "hypodronic-farm": "Ferme à vaporisateurs",
         "ore-mine": "Mine de Lithium",
         "cristal-synthetiser": "Synthétiseur de cristaux",
+        "governor-palace": "Palais du gouverneur",
         "shipyard": "Usine de chasseurs",
         "spatial-shipyard": "Chantier naval",
         "technolab": "Laboratoire expérimental",
