Fix ship pictos

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -252,6 +252,7 @@
             "fighter": "Chasseur",
             "bomber": "Bombardier",
             "corvette": "Corvette",
+            "cruiser": "Croiseur",
             "frigate": "Frégate",
             "freighter": "Transport"
         }
