Add modules list to ship model details and fix stats display

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -253,7 +253,7 @@
             "nb_shots": "Cadence",
             "damage": "Dégâts",
             "precision": "Précision",
-            "power": "Puissance"
+            "power": "Boucliers"
         },
         "type" : "Classe",
         "types": {
