--- a/locales/fr.json
+++ b/locales/fr.json
@@ -316,6 +316,7 @@
         "max_lots": "%nb_lots% lots max",
         "offer": "Offre",
         "offers": {
+            "invalid_quantity": "La quantité doit être positive",
             "invalid_price": "Le prix doit être entre 1 et 1000 crédits à l'unité"
         },
         "operation": "Type d'offre",
