Fix planet summary label

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -375,8 +375,8 @@
         "authorized_factions": "Factions acceptées",
         "available_quantity": "%quantity% disponible",
         "available_lots": "Lots disponibles",
-        "female_buyer": "Acheteuse",
-        "male_buyer": "Acheteur",
+        "buyer_female": "Acheteuse",
+        "buyer_male": "Acheteur",
         "accept_offer": "Accepter l'offre",
         "cancel_offer": "Annuler l'offre",
         "create_offer": "Créer une offre",
@@ -420,8 +420,8 @@
         "race": "Race",
         "sales": "Ventes",
         "selected_offer": "Offre sélectionnée",
-        "female_seller": "Vendeuse",
-        "male_seller": "Vendeur",
+        "seller_female": "Vendeuse",
+        "seller_male": "Vendeur",
         "stock": "Stock",
         "trading_post": "Comptoir commercial",
         "transport": "Transport et Escorte",
@@ -435,6 +435,10 @@
         "yourself": "Vous"
     },
     "combat": {
+        "attacker_female": "Attaquante",
+        "attacker_male": "Attaquant",
+        "defender_female": "Défenseuse",
+        "defender_male": "Défenseur",
         "report": "Rapport",
         "show_report": "Voir le rapport",
         "visualize": "Visualiser",
